--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,18 @@
-junit
-junit
-4.11
-test
-
-      
-
-org.seleniumhq.selenium  
-selenium-java  
-3.141.59  
-
-io.github.bonigarcia
-webdrivermanager
-4.3.1
+<dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>  
+	<groupId>org.seleniumhq.selenium</groupId>  
+	<artifactId>selenium-java</artifactId>  
+	<version>3.141.59</version>  
+    </dependency>  
+    <dependency>
+	<groupId>io.github.bonigarcia</groupId>
+	<artifactId>webdrivermanager</artifactId>
+	<version>4.3.1</version>
+    </dependency>
+  </dependencies>
